--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "async-mutex": "^0.1.3",
     "chrome-remote-interface": "^0.28.0",
     "command-exists": "^1.2.8",
+    "cors-gate": "^1.1.3",
     "env-paths": "^1.0.0",
     "global-agent": "^2.0.0",
     "global-tunnel-ng": "^2.7.1",
