--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "@types/klaw": "^3.0.2",
     "@types/lodash": "^4.14.117",
     "@types/mocha": "^5.2.5",
-    "@types/node": "~20.11.0",
+    "@types/node": "~20.11.18",
     "@types/node-forge": "^0.9.9",
     "@types/request-promise-native": "^1.0.15",
     "@types/rimraf": "^2.0.2",
@@ -147,7 +147,7 @@
     }
   },
   "engines": {
-    "node": "^20.11.0"
+    "node": "20.11.1"
   },
   "keywords": [
     "http",
@@ -190,7 +190,7 @@
         }
       },
       "node": {
-        "version": "20.11.0",
+        "version": "20.11.1",
         "targets": [
           "win32-x64",
           "linux-x64",
